# grep-rs

./: Cargo.toml  README.md  cargo
src/: config.rs  lib.rs  main.rs  matcher.rs  options.rs  parser.rs  record.rs  startup.rs
tests/: integration_test.rs
